css/main.css
@-moz-viewport { width: device-width; scale: 1;}
@-ms-viewport { width: device-width; scale: 1;}
@-o-viewport { width: device-width; scale: 1;}
@-wedkit-viewport { width: device-width; scale: 1;}
@viewport { width: device-width; scale: 1;}

html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font: normal 100%/1.3 Verdana, sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

body {
  margin: 0;
  background-color: powderblue;
}

img {
  width: 100%;
  display: block;
}

body {
  margin: 0;
  background-image: url(../assets/bikebw.jpg);
  background-size: cover;
  background-position: center;
}

.logo {
  width: 40%;
  display: block;
  margin-top: 3%;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  z-index: 1000;
}

.image-wrapper {
  width: 100%;
  padding-top: 50%;
  background-size: cover;
  background-position: center;
}

.image-wrapper h1 {
  position: absolute;
	top: 10%;
	padding: 0.1rem;
	width: 100%;
	color: #FF7171;
	text-align: center;
	font-size: 50px;
}

.image-wrapper h2 {
  position: absolute;
  top: 8%;
  padding: 0;
  width: 100%;
  color: white;
  text-align: center;
  font-size: 12px;
  font-weight: normal;
}

.skull {
  width: 40%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: -10rem;
  position: relative;
  z-index: 100;
}

p {
  font-size: 14px;
  margin-left: .85rem;
  margin-right: .85rem;
  color: white;
  text-align: left;
  margin-top: 1rem;
}

.firstcharacter {
  float: left;
  color: #FF7171;
  font-size: 72px;
  line-height: 60px;
  padding-top: 0;
  padding-right: 8px;
  padding-left: 3px;
  font-family: Georgia;
}

footer a {
  text-decoration: none;
}

footer img {
  display: inline-block;
  border-radius: 5px;
  width: 20%;
  margin: 5% 14%;
  margin-top: -.85rem;
}

@media only screen and (min-width: 28em) {

  .image-wrapper {
    position: relative;
    width: 100%;
    background-image: url(../assets/bikebw.jpg);
    padding-top: 60%;
    background-size: cover;
    background-position: center;
  }

  .image-wrapper h1 {
    position: absolute;
  	top: 25%;
  	padding: 0;
  	width: 100%;
  	color: deeppink;
    color: rgba(255, 20, 147, 0.9);
  	text-align: center;
  	font-size: 44px;
  }

  .image-wrapper h2 {
    position: absolute;
    top: 55%;
    padding: 0;
    width: 100%;
    color: powderblue;
    text-align: center;
    font-size: 14px;
    font-weight: normal;
  }

  .selfie {
    border-radius: 50%;
    width: 27%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: -4rem;
    position: relative;
    z-index: 100;
  }

  p {
    font-size: 16px;
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    color: white;
    text-align: left;
    margin-top: 1rem;
  }

  .firstcharacter {
    float: left;
    color: deeppink;
    font-size: 72px;
    line-height: 60px;
    padding-top: 0;
    padding-right: 8px;
    padding-left: 3px;
    font-family: Georgia;
  }

  footer a {
    text-decoration: none;
    color: white;
  }

  footer img {
    display: inline-block;
    border-radius: 5px;
    width: 15%;
    margin: 4.5%;
    margin-top: -.85rem;
  }
}

@media only screen and (min-width: 38em) {

  .image-wrapper {
    position: relative;
    width: 100%;
    background-image: url(../assets/bikebw.jpg);
    padding-top: 50%;
    background-size: cover;
    background-position: center;
  }

  .image-wrapper h1 {
    position: absolute;
  	top: 20%;
  	padding: 0;
  	width: 100%;
  	color: deeppink;
    color: rgba(255, 20, 147, 0.9);
  	text-align: center;
  	font-size: 58px;
  }

  .image-wrapper h2 {
    position: absolute;
    top: 55%;
    padding: 0;
    width: 100%;
    color: powderblue;
    text-align: center;
    font-size: 16px;
  }

  .skull {
    width: 23%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: -4rem;
    position: relative;
    z-index: 100;
  }

  p {
    font-size: 16px;
    margin-left: 1.8rem;
    margin-right: 1.8rem;
    color: white;
    text-align: left;
    margin-top: 1rem;
  }

  .firstcharacter {
    float: left;
    color: deeppink;
    font-size: 78px;
    line-height: 60px;
    padding-top: 0;
    padding-right: 8px;
    padding-left: 3px;
    font-family: Georgia;
  }

  footer a {
    text-decoration: none;
    color: white;
  }

  footer img {
    display: inline-block;
    border-radius: 5px;
    width: 13%;
    margin: 5.5%;
    margin-top: -.85rem;
  }
}

@media only screen and (min-width: 48em) {

  .image-wrapper {
    position: relative;
    width: 100%;
    background-image: url(../assets/bikebw.jpg);
    padding-top: 45%;
    background-size: cover;
    background-position: center;
  }

  .image-wrapper h1 {
    position: absolute;
  	top: 20%;
  	padding: 0;
  	width: 100%;
  	color: deeppink;
    color: rgba(255, 20, 147, 0.9);
  	text-align: center;
  	font-size: 62px;
  }

  .image-wrapper h2 {
    position: absolute;
    top: 55%;
    padding: 0;
    width: 100%;
    color: powderblue;
    text-align: center;
    font-size: 16px;
  }

  .skull {
    width: 20%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: -5rem;
    position: relative;
    z-index: 100;
  }

  p {
    font-size: 16px;
    margin-left: 2.5rem;
    margin-right: 2.5rem;
    color: white;
    text-align: left;
    margin-top: 1rem;
  }

  .firstcharacter {
    float: left;
    color: deeppink;
    font-size: 78px;
    line-height: 60px;
    padding-top: 0;
    padding-right: 8px;
    padding-left: 3px;
    font-family: Georgia;
  }

  footer a {
    text-decoration: none;
    color: white;
  }

  footer img {
    display: inline-block;
    border-radius: 5px;
    width: 13%;
    margin: 5.7%;
    margin-top: -.85rem;
  }

}

@media only screen and (min-width: 56em) {

  .image-wrapper {
    position: relative;
    width: 100%;
    background-image: url(../assets/bikebw.jpg);
    padding-top: 40%;
    background-size: cover;
    background-position: center;
  }

  .image-wrapper h1 {
    position: absolute;
  	top: 20%;
  	padding: 0;
  	width: 100%;
  	color: deeppink;
    color: rgba(255, 20, 147, 0.9);
  	text-align: center;
  	font-size: 70px;
  }

  .image-wrapper h2 {
    position: absolute;
    top: 55%;
    padding: 0;
    width: 100%;
    color: powderblue;
    text-align: center;
    font-size: 18px;
  }

  .skull {
    width: 18%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: -5rem;
    position: relative;
    z-index: 100;
  }

  p {
    font-size: 16px;
    margin-left: 2.5rem;
    margin-right: 2.5rem;
    color: white;
    text-align: left;
    margin-top: 1rem;
  }

  .firstcharacter {
    float: left;
    color: deeppink;
    font-size: 78px;
    line-height: 60px;
    padding-top: 0;
    padding-right: 8px;
    padding-left: 3px;
    font-family: Georgia;
  }

  footer a {
    text-decoration: none;
    color: white;
  }

  footer img {
    display: inline-block;
    border-radius: 5px;
    width: 10%;
    margin: 7%;
    margin-top: -.85rem;
  }

}

@media only screen and (min-width: 64em) {

  .image-wrapper {
    position: relative;
    width: 100%;
    background-image: url(../assets/bikebw.jpg);
    padding-top: 35%;
    background-size: cover;
    background-position: center;
  }

  .skull {
    width: 15%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: -5rem;
    position: relative;
    z-index: 100;
  }

  p {
    font-size: 18px;
    margin-left: 5rem;
    margin-right: 5rem;
    color: white;
    text-align: left;
    margin-top: 1rem;
  }

  footer a {
    text-decoration: none;
    color: white;
  }

  footer img {
    display: inline-block;
    border-radius: 5px;
    width: 8%;
    margin: 8%;
    margin-top: -.85rem;
  }
}

@media only screen and (min-width: 80em) {

  .image-wrapper {
    padding-top: 25%;
  }

  .image-wrapper h1 {
    font-size: 80px;
    top: 10%;
  }

  .image-wrapper h2 {
    position: absolute;
    top: 55%;
    padding: 0;
    width: 100%;
    color: powderblue;
    text-align: center;
    font-size: 16px;
  }

  .skull {
    width: 12%;
  }

  p {
    margin-left: 8rem;
    margin-right: 8rem;
  }

  footer img {
    width: 7%;
    margin: 8.8%;
    margin-top: -1rem;
  }
}

